[gd_scene load_steps=4 format=2]

[ext_resource path="res://Roboto/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PointDisplay.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="PointDisplay" type="LineEdit"]
margin_right = 220.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_StatDisplay_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_StatDisplay_focus_exited"]
[connection signal="text_entered" from="." to="." method="_on_StatDisplay_text_entered"]
